objects/Account_Support_Request__c/Account_Support_Request__c.object-meta.xml
<CustomObject>
    <description>Internal Support Requests</description>
    <label>Internal Support Request</label>
    <nameField>
        <displayFormat>ISR-{000000}</displayFormat>
        <label>Internal Support Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Internal Support Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>