objects/Account_Support_Request__c/fields/A16z_Customer_Attendees__c.field-meta.xml
<CustomField>
    <fullName>A16z_Customer_Attendees__c</fullName>
    <description>For A16z EBC Customer Attendees</description>
    <label>A16z Customer Attendees</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>