objects/Account_Support_Request__c/fields/Account_18_id__c.field-meta.xml
<CustomField>
    <fullName>Account_18_id__c</fullName>
    <formula>Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account 18 id</label>
    <type>Text</type>
</CustomField>