objects/Account_Support_Request__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please enter the end user/customer for this Opportunity</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Internal Support Requests (Account)</relationshipLabel>
    <relationshipName>Account_Support_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>