objects/Account_Support_Request__c/fields/Account_CSM__c.field-meta.xml
<CustomField>
    <fullName>Account_CSM__c</fullName>
    <description>Removed for CSM Revamp Project (Ref Katie Fanelli). Should be ok to delete</description>
    <label>Account CSM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>