objects/Account_Support_Request__c/fields/Account_Exception_Approved__c.field-meta.xml
<CustomField>
    <fullName>Account_Exception_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Account Exception Approved - to trigger PB</description>
    <inlineHelpText>Account Exception Approved - to trigger PB</inlineHelpText>
    <label>Account Exception Approved</label>
    <type>Checkbox</type>
</CustomField>