objects/Account_Support_Request__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>SS_1005</description>
    <formula>Opportunity__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>