objects/Account_Support_Request__c/fields/Account_Overview__c.field-meta.xml
<CustomField>
    <fullName>Account_Overview__c</fullName>
    <inlineHelpText>Brief high-level overview of the account, status of relationship, and progress/activity to date.</inlineHelpText>
    <label>Account Engagement Overview</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>