objects/Account_Support_Request__c/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Support_Requests_owner</relationshipName>
    <type>Lookup</type>
</CustomField>