objects/Account_Support_Request__c/fields/Account_TAM__c.field-meta.xml
<CustomField>
    <fullName>Account_TAM__c</fullName>
    <label>Account  TAM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>