objects/Account_Support_Request__c/fields/Account_TAM_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_TAM_Owner__c</fullName>
    <formula>Opportunity__r.Account.TAM_Assigned_GS__r.FirstName  &amp;  Opportunity__r.Account.TAM_Assigned_GS__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account TAM Owner</label>
    <type>Text</type>
</CustomField>