objects/Account_Support_Request__c/fields/Account_TSE__c.field-meta.xml
<CustomField>
    <fullName>Account_TSE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account TSE</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Internal_Support_RequestsY8qK</relationshipName>
    <type>Lookup</type>
</CustomField>