objects/Account_Support_Request__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <formula>Text(Account__r.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>