objects/Account_Support_Request__c/fields/Account_Type_For__c.field-meta.xml
<CustomField>
    <fullName>Account_Type_For__c</fullName>
    <formula>IF( Account_Type__c = &quot;Customer&quot;,&quot;Customer&quot;,IF( Number_of_Open_Opportunties__c &gt;0,&quot;Prospect&quot;,&quot;White Space&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>