objects/Account_Support_Request__c/fields/Active_Modules__c.field-meta.xml
<CustomField>
    <fullName>Active_Modules__c</fullName>
    <description>To be filled in by PB and flow from Account. Created for Training Request ISR</description>
    <label>Active Modules</label>
    <length>255</length>
    <type>Text</type>
</CustomField>