objects/Account_Support_Request__c/fields/Actual_Date_of_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Actual_Date_of_Meeting__c</fullName>
    <description>06.16.25: SS-10088 - field to capture the actual work start date for this ISR. Stakeholders: Laura Narat, Benny Fry, Colin Smith, Erik Gaston</description>
    <inlineHelpText>ISR MANAGEMENT TEAM ONLY - When did work start on this deal (mainly for late ISR submissions)?</inlineHelpText>
    <label>Actual Date of Meeting</label>
    <type>Date</type>
</CustomField>