objects/Account_Support_Request__c/fields/Additional_comments_from_Partner__c.field-meta.xml
<CustomField>
    <fullName>Additional_comments_from_Partner__c</fullName>
    <description>SS-1005</description>
    <inlineHelpText>Comments from Partner for receiving this opportunity</inlineHelpText>
    <label>Additional comments from Partner</label>
    <length>7496</length>
    <type>LongTextArea</type>
</CustomField>