objects/Account_Support_Request__c/fields/Additional_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Additional_Date_Time__c</fullName>
    <label>Additional Date/Time Options</label>
    <type>TextArea</type>
</CustomField>