objects/Account_Support_Request__c/fields/Age_in_Hours__c.field-meta.xml
<CustomField>
    <fullName>Age_in_Hours__c</fullName>
    <formula>IF(ISPICKVAL( Status__c ,&quot;Completed&quot;),  (Resolution_Date_Time__c - CreatedDate)*24, (NOW() - CreatedDate ) *24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age in Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>