objects/Account_Support_Request__c/fields/Alternate_TAM_id__c.field-meta.xml
<CustomField>
    <fullName>Alternate_TAM_id__c</fullName>
    <formula>Alternate_TAM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alternate TAM Id</label>
    <type>Text</type>
</CustomField>