objects/Account_Support_Request__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <inlineHelpText>Sales &amp; Server Country Exception: For sales and server deployment in the requested country
Server Only Country Exception: For server deployment in the requested country</inlineHelpText>
    <label>Application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales &amp; Server Country Exception</fullName>
            </value>
            <value>
                <fullName>Server Country Exception only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>