objects/Account_Support_Request__c/fields/Audience__c.field-meta.xml
<CustomField>
    <fullName>Audience__c</fullName>
    <label>Audience</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Executive Team (CISO, CIO, etc)</fullName>
            </value>
            <value>
                <fullName>Senior Management (Director, VP, etc)</fullName>
            </value>
            <value>
                <fullName>Analysts</fullName>
            </value>
            <value>
                <fullName>Team Leaders</fullName>
            </value>
            <value>
                <fullName>Administrators and Engineers</fullName>
            </value>
            <value>
                <fullName>Other (please specify in objective)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>