objects/Account_Support_Request__c/fields/Audit_Committee_Chair__c.field-meta.xml
<CustomField>
    <fullName>Audit_Committee_Chair__c</fullName>
    <label>Audit Committee Chair</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>