objects/Account_Support_Request__c/fields/AVP__c.field-meta.xml
<CustomField>
    <fullName>AVP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AVP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Support_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>