objects/Account_Support_Request__c/fields/Beforehand_meet_up__c.field-meta.xml
<CustomField>
    <fullName>Beforehand_meet_up__c</fullName>
    <description>Relabelled per Katie Fanelli&apos;s request, changed label again per Katie</description>
    <inlineHelpText>Is there anything else we should know? If there is a beforehand meetup, please include details here</inlineHelpText>
    <label>Beforehand Meet Up</label>
    <type>TextArea</type>
</CustomField>