objects/Account_Support_Request__c/fields/Billable_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Billable_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ref: David Mkrtchian, Katie Fanelli and Daniel Moran</description>
    <inlineHelpText>By checking this box, you are confirming that Customer is aware that all ESO resources are billed to and paid by Customer</inlineHelpText>
    <label>Budget for ESO resources confirmed</label>
    <type>Checkbox</type>
</CustomField>