objects/Account_Support_Request__c/fields/Bloomberg_Link__c.field-meta.xml
<CustomField>
    <fullName>Bloomberg_Link__c</fullName>
    <label>Bloomberg Link</label>
    <type>TextArea</type>
</CustomField>