objects/Account_Support_Request__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <description>For Deals Desk ISR</description>
    <label>Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>