objects/Account_Support_Request__c/fields/Business_justification__c.field-meta.xml
<CustomField>
    <fullName>Business_justification__c</fullName>
    <description>Business justification
Country Exception</description>
    <label>Business justification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer breach</fullName>
            </value>
            <value>
                <fullName>Land and expand opportunity</fullName>
            </value>
            <value>
                <fullName>Replacing a competitor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>