objects/Account_Support_Request__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <description>SS-194
If a value is added to this field, it also needs to be added to ISR Field &quot;Business_Unit_ID_Formula__c&quot; along with Kimble Business Unit Record Id from Kimble Object &quot;Business Units&quot;.</description>
    <label>ESO Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Americas Commercial</fullName>
            </value>
            <value>
                <fullName>US Northeast Focus +</fullName>
            </value>
            <value>
                <fullName>US Northeast ENT</fullName>
            </value>
            <value>
                <fullName>US Southeast Focus +</fullName>
            </value>
            <value>
                <fullName>US Southeast ENT</fullName>
            </value>
            <value>
                <fullName>US West Focus +</fullName>
            </value>
            <value>
                <fullName>US Central Focus +</fullName>
            </value>
            <value>
                <fullName>US Central-West ENT</fullName>
            </value>
            <value>
                <fullName>Americas PubSec</fullName>
            </value>
            <value>
                <fullName>US PubSec ALPHA</fullName>
            </value>
            <value>
                <fullName>US PubSec BRAVO</fullName>
            </value>
            <value>
                <fullName>US PubSec MIKE</fullName>
            </value>
            <value>
                <fullName>US PubSec ECHO</fullName>
            </value>
            <value>
                <fullName>US PubSec JULIET</fullName>
            </value>
            <value>
                <fullName>US PubSec OMAHA</fullName>
            </value>
            <value>
                <fullName>Asia North</fullName>
            </value>
            <value>
                <fullName>Asia South</fullName>
            </value>
            <value>
                <fullName>EMEA Commercial</fullName>
            </value>
            <value>
                <fullName>EMEA PubSec</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>APJ</fullName>
            </value>
            <value>
                <fullName>Americas Federal</fullName>
                <isActive>false</isActive>
                <label>Americas Federal</label>
            </value>
            <value>
                <fullName>International</fullName>
                <isActive>false</isActive>
                <label>International</label>
            </value>
            <value>
                <fullName>Tanium</fullName>
                <isActive>false</isActive>
                <label>Tanium</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>