objects/Account_Support_Request__c/fields/CAD_Status__c.field-meta.xml
<CustomField>
    <fullName>CAD_Status__c</fullName>
    <formula>Account__r.CAD_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CS Sentiment Status</label>
    <type>Text</type>
</CustomField>