objects/Account_Support_Request__c/fields/Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Campaign_ID__c</fullName>
    <formula>CASESAFEID(Campaign_If_Applicable__c)</formula>
    <label>Campaign ID</label>
    <type>Text</type>
</CustomField>