objects/Account_Support_Request__c/fields/Campaign_If_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Campaign_If_Applicable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Full Campaign Name</description>
    <inlineHelpText>Is this related to a marketing campaign</inlineHelpText>
    <label>Campaign (If Applicable)</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Internal Support Requests</relationshipLabel>
    <relationshipName>Internal_Support_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>