objects/Account_Support_Request__c/fields/Canceled_Reason__c.field-meta.xml
<CustomField>
    <fullName>Canceled_Reason__c</fullName>
    <label>Canceled Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Road_Map_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>No Longer Needed</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>