objects/Account_Support_Request__c/fields/Caren_Notes__c.field-meta.xml
<CustomField>
    <fullName>Caren_Notes__c</fullName>
    <label>Sr. Advisor Executive Team Notes short</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>