objects/Account_Support_Request__c/fields/Caren_Progress_Update__c.field-meta.xml
<CustomField>
    <fullName>Caren_Progress_Update__c</fullName>
    <inlineHelpText>Executive Engagement Team use only</inlineHelpText>
    <label>Sr. Advisor Executive Team Updates short</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>