objects/Account_Support_Request__c/fields/CE_Justification__c.field-meta.xml
<CustomField>
    <fullName>CE_Justification__c</fullName>
    <description>INC0134121</description>
    <inlineHelpText>Please describe why you are requesting a Customer Engagement Director</inlineHelpText>
    <label>CE Justification</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>