objects/Account_Support_Request__c/fields/CEO_Details__c.field-meta.xml
<CustomField>
    <fullName>CEO_Details__c</fullName>
    <label>CEO</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>