objects/Account_Support_Request__c/fields/CIO__c.field-meta.xml
<CustomField>
    <fullName>CIO__c</fullName>
    <label>CIO</label>
    <type>TextArea</type>
</CustomField>