objects/Account_Support_Request__c/fields/CISO_Comments_Feedback__c.field-meta.xml
<CustomField>
    <fullName>CISO_Comments_Feedback__c</fullName>
    <description>Added Per Chris Hodson&apos;s Request</description>
    <label>CISO Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>