objects/Account_Support_Request__c/fields/Class_ID__c.field-meta.xml
<CustomField>
    <fullName>Class_ID__c</fullName>
    <description>Field requested by Natalie Quon from the Training team. Jira ticket SS-8762</description>
    <inlineHelpText>Stores the ID for this training class</inlineHelpText>
    <label>Class ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>