objects/Account_Support_Request__c/fields/Closed_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Reason__c</fullName>
    <description>INC0189904 - E-Staff and Advisors want to track the reason we are losing deals after their intro meetings. It also helps us correct these issues by strengthening our internal operations and external messaging.</description>
    <label>Closed Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Interested in Tanium Product</fullName>
            </value>
            <value>
                <fullName>Cost-Prohibitive / No Budget</fullName>
            </value>
            <value>
                <fullName>Target Company Turnover</fullName>
            </value>
            <value>
                <fullName>Tanium Turnover</fullName>
            </value>
            <value>
                <fullName>No Interest After Intro Meeting (General)</fullName>
            </value>
            <value>
                <fullName>Communication Stopped after Response</fullName>
            </value>
            <value>
                <fullName>No Response to Intro Request</fullName>
            </value>
            <value>
                <fullName>Intro Request Unsuccessful</fullName>
                <isActive>false</isActive>
                <label>Intro Request Unsuccessful</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>