objects/Account_Support_Request__c/fields/Competitive_Products_Involved__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Products_Involved__c</fullName>
    <inlineHelpText>Product and our competing product</inlineHelpText>
    <label>Competitive Products Installed</label>
    <type>TextArea</type>
</CustomField>