objects/Account_Support_Request__c/fields/Country_Exception_Approved__c.field-meta.xml
<CustomField>
    <fullName>Country_Exception_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Country Exception Approved</label>
    <type>Checkbox</type>
</CustomField>