objects/Account_Support_Request__c/fields/CSM_Manager_Account_LU__c.field-meta.xml
<CustomField>
    <fullName>CSM_Manager_Account_LU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CSM Manager (Account) Lookup added to add this field to EBC ISR Email Alert
Will be filled up from Account via PB: Assign Account Support Request Hierarchy</description>
    <inlineHelpText>CSM Manager (Account)</inlineHelpText>
    <label>CSM Manager (Account)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Internal_Support_Requests_LU</relationshipName>
    <type>Lookup</type>
</CustomField>