objects/Account_Support_Request__c/fields/CSM_Prioritized_Focus_Areas__c.field-meta.xml
<CustomField>
    <fullName>CSM_Prioritized_Focus_Areas__c</fullName>
    <inlineHelpText>To review definitions and examples of focus areas, visit the CSM Google Site: https://sites.google.com/tanium.com/customersuccess/engagement-model</inlineHelpText>
    <label>CSM Prioritized Focus Area</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IT Hygiene</fullName>
            </value>
            <value>
                <fullName>New Account</fullName>
            </value>
            <value>
                <fullName>Low Health</fullName>
            </value>
            <value>
                <fullName>ARR Protection: Renewal Risk</fullName>
            </value>
            <value>
                <fullName>NARR: Cross/Up-Sell</fullName>
            </value>
            <value>
                <fullName>Single-Threaded: Use Case Expansion</fullName>
            </value>
            <value>
                <fullName>Single-Threaded: Drive Adoption</fullName>
            </value>
            <value>
                <fullName>Executive Relationships</fullName>
            </value>
            <value>
                <fullName>Advocacy Potential</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Strategic Importance</fullName>
                <isActive>false</isActive>
                <label>Strategic Importance</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>