objects/Account_Support_Request__c/fields/CSM_Touch_Level__c.field-meta.xml
<CustomField>
    <fullName>CSM_Touch_Level__c</fullName>
    <inlineHelpText>This field shows the CSM delivery level effort requested; used for workload planning</inlineHelpText>
    <label>CSM Delivery Model</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advisory</fullName>
            </value>
            <value>
                <fullName>High Touch</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>