objects/Account_Support_Request__c/fields/Current_Month_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Month_End_Date__c</fullName>
    <description>Current Month End Date</description>
    <formula>DATE( Year(ADDMONTHS(TODAY(),1)),MONTH( ADDMONTHS(TODAY(),1)),1 ) -1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Current Month End Date</inlineHelpText>
    <label>Current Month End Date</label>
    <type>Date</type>
</CustomField>