objects/Account_Support_Request__c/fields/Current_Tanium_Partner_support__c.field-meta.xml
<CustomField>
    <fullName>Current_Tanium_Partner_support__c</fullName>
    <description>Is there a current Tanium partner that can support?</description>
    <inlineHelpText>Is there a current Tanium partner that can support?</inlineHelpText>
    <label>Current Tanium Partner support ?</label>
    <type>TextArea</type>
</CustomField>