objects/Account_Support_Request__c/fields/Customer_Attendee_2__c.field-meta.xml
<CustomField>
    <fullName>Customer_Attendee_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Attendee 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Account_Support_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>