objects/Account_Support_Request__c/fields/Customer_Attendee_3__c.field-meta.xml
<CustomField>
    <fullName>Customer_Attendee_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Attendee 3</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Account_Support_Requests2</relationshipName>
    <type>Lookup</type>
</CustomField>