objects/Account_Support_Request__c/fields/Customer_Attendee_4__c.field-meta.xml
<CustomField>
    <fullName>Customer_Attendee_4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Attendee 4</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Account_Support_Requests3</relationshipName>
    <type>Lookup</type>
</CustomField>