objects/Account_Support_Request__c/fields/Customer_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Customer_Attendees__c</fullName>
    <formula>IF( NOT(ISBLANK(Customer_Attendee_5__c)), Customer_Attendee_5__r.FirstName +&quot;, &quot;+ Customer_Attendee_5__r.LastName +&quot; : &quot;+ Customer_Attendee_5__r.Title +BR()+ 
Customer_Attendee_4__r.FirstName +&quot;, &quot;+ Customer_Attendee_4__r.LastName +&quot; : &quot;+ Customer_Attendee_4__r.Title  +BR()+
Customer_Attendee_3__r.FirstName +&quot;, &quot;+ Customer_Attendee_3__r.LastName +&quot; : &quot;+ Customer_Attendee_3__r.Title  +BR()+
Customer_Attendee_2__r.FirstName +&quot;, &quot;+ Customer_Attendee_2__r.LastName +&quot; : &quot;+ Customer_Attendee_2__r.Title +BR()+
Customer_Attendee_1__r.FirstName +&quot;, &quot;+ Customer_Attendee_1__r.LastName +&quot; : &quot;+ Customer_Attendee_1__r.Title  ,IF( NOT(ISBLANK(Customer_Attendee_4__c)),Customer_Attendee_4__r.FirstName +&quot;, &quot;+ Customer_Attendee_4__r.LastName +&quot; : &quot;+ Customer_Attendee_4__r.Title +BR()+
Customer_Attendee_3__r.FirstName +&quot;, &quot;+ Customer_Attendee_3__r.LastName +&quot; : &quot;+ Customer_Attendee_3__r.Title +BR()+
Customer_Attendee_2__r.FirstName +&quot;, &quot;+ Customer_Attendee_2__r.LastName +&quot; : &quot;+ Customer_Attendee_2__r.Title +BR()+
Customer_Attendee_1__r.FirstName +&quot;, &quot;+ Customer_Attendee_1__r.LastName +&quot; : &quot;+ Customer_Attendee_1__r.Title ,IF( NOT(ISBLANK(Customer_Attendee_3__c)),Customer_Attendee_3__r.FirstName +&quot;, &quot;+ Customer_Attendee_3__r.LastName +&quot; : &quot;+ Customer_Attendee_3__r.Title +BR()+
Customer_Attendee_2__r.FirstName +&quot;, &quot;+ Customer_Attendee_2__r.LastName +&quot; : &quot;+ Customer_Attendee_2__r.Title +BR()+
Customer_Attendee_1__r.FirstName +&quot;, &quot;+ Customer_Attendee_1__r.LastName +&quot; : &quot;+ Customer_Attendee_1__r.Title ,IF( NOT(ISBLANK(Customer_Attendee_2__c)),Customer_Attendee_2__r.FirstName +&quot;, &quot;+ Customer_Attendee_2__r.LastName +&quot; : &quot;+ Customer_Attendee_2__r.Title +BR()+
Customer_Attendee_1__r.FirstName +&quot;, &quot;+ Customer_Attendee_1__r.LastName +&quot; : &quot;+ Customer_Attendee_1__r.Title ,IF( NOT(ISBLANK(Customer_Attendee_1__c)),Customer_Attendee_1__r.FirstName +&quot;, &quot;+ Customer_Attendee_1__r.LastName +&quot; : &quot;+ Customer_Attendee_1__r.Title,&quot; &quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Attendees</label>
    <type>Text</type>
</CustomField>