objects/Account_Support_Request__c/fields/Customer_has_budget_funding__c.field-meta.xml
<CustomField>
    <fullName>Customer_has_budget_funding__c</fullName>
    <inlineHelpText>Does the customer has budget/funding?</inlineHelpText>
    <label>Customer has budget/funding?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>