objects/Account_Support_Request__c/fields/Customer_Health_Score__c.field-meta.xml
<CustomField>
    <fullName>Customer_Health_Score__c</fullName>
    <formula>Account__r.CustomerHealthScore__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Health Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>