objects/Account_Support_Request__c/fields/Customer_Owns_Threat_Response__c.field-meta.xml
<CustomField>
    <fullName>Customer_Owns_Threat_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SS-11385: field created.</description>
    <inlineHelpText>Threat Response is the only required product for this hunting service.</inlineHelpText>
    <label>Customer Owns Threat Response</label>
    <type>Checkbox</type>
</CustomField>