objects/Account_Support_Request__c/fields/Customer_special_requirements__c.field-meta.xml
<CustomField>
    <fullName>Customer_special_requirements__c</fullName>
    <description>SS-11385: field created.</description>
    <inlineHelpText>Any special considerations for hunter i.e.. special clearance needs or region/time-zone they must be based in.</inlineHelpText>
    <label>Customer special requirements</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>