objects/Account_Support_Request__c/fields/Customer_Training_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Customer_Training_Requirements__c</fullName>
    <description>Training Request</description>
    <inlineHelpText>Provide a brief description of the customer&apos;s training requirements and the users/departments who are requesting to take training</inlineHelpText>
    <label>Customer Training Requirements</label>
    <type>TextArea</type>
</CustomField>