objects/Account_Support_Request__c/fields/Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Type__c</fullName>
    <description>SS-10963 - Deprecated.</description>
    <formula>TEXT(Opportunity__r.Account.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEPRECATED - Customer Type</label>
    <type>Text</type>
</CustomField>