objects/Account_Support_Request__c/fields/Customer_Will_Provision__c.field-meta.xml
<CustomField>
    <fullName>Customer_Will_Provision__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SS-11385: field created.</description>
    <inlineHelpText>Customer fully understands hands-on-keyboard requirement including providing customer VDI or hardware for access.</inlineHelpText>
    <label>Customer Will Provision HoK</label>
    <type>Checkbox</type>
</CustomField>