objects/Account_Support_Request__c/fields/Date_Meeting_Request_sent_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Date_Meeting_Request_sent_to_Contact__c</fullName>
    <description>For Senior Advisor Layout V2</description>
    <label>Date - Meeting Request sent to Contact</label>
    <type>Date</type>
</CustomField>