objects/Account_Support_Request__c/fields/Date_Request_Approved__c.field-meta.xml
<CustomField>
    <fullName>Date_Request_Approved__c</fullName>
    <description>Added to Sr. Advisor ISR to be updated from Approval Process once request Status is Approved and Under Review</description>
    <label>Date - Request Approved</label>
    <type>Date</type>
</CustomField>